[package]
name = "bpfx"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aya-ebpf = "0.1.1"
aya-ebpf-macros = "0.1.2"
aya-log-ebpf = "0.1.0"
aya = "0.13.1"
bpfx-common = {path = "./bpfx-common/", features = ["user"]}
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "full"] }
env_logger = "0.11.11"
aya-log = "0.2.1"
futures = "0.3.32"
thiserror = "2.0.18"
log = "0.4.33"

[workspace]
members = [
  ".",
    "bpfx-common",
    "bpfx-ebpf",
]

resolver = "3"

# keywords = [
#     "ebpf",
#     "linux",
#     "tracing",
# ]
# readme = "README.md"
