[package]
name = "bpfx"
version = "0.1.0"
edition = "2024"
description = "A high-level Rust library for eBPF-based observability."
readme = "README.md"
license = "MIT"
repository = "https://github.com/vamsi200/bpfx"
keywords = ["ebpf", "linux", "observability"]
categories = ["development-tools", "api-bindings"]
include = [
    "src/**",
    "examples/**",
    "assets/**",
    "README.md",
    "LICENSE",
    "Cargo.toml",
]

[dependencies]
aya = "0.13.1"
bpfx-common = { version = "0.1.0", path = "./bpfx-common", features = ["user"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
futures = "0.3.32"
thiserror = "2.0.18"
log = "0.4.33"
env_logger = "0.11.11"
aya-log = "0.2.1"

[workspace]
members = [
  ".",
    "bpfx-common",
    "bpfx-ebpf",
]

resolver = "3"

[profile.release]
   panic = "abort"
   lto = true
   codegen-units = 1
   overflow-checks = false
   debug-assertions = false
